# neotex

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
crates/collections/: Cargo.toml
crates/collections/src/: lib.rs  ring_buffer.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: cursor.rs  lexed_str.rs  lib.rs  syntax.rs  tests.rs  token.rs
crates/neotex/: Cargo.toml
crates/neotex/src/: main.rs
crates/parser/: Cargo.toml  test.ntex
crates/parser/src/: lib.rs  parser.rs  preparse.rs  syntax.rs  tests.rs
crates/parser/src/expansion/: errors.rs  expanded.rs  expander.rs  mod.rs  resexp_parser.rs  resolver.rs  resolving.rs  store.rs  tests.rs
crates/parser/src/lexer/: definition.rs  infra.rs  mod.rs  tables.rs  tests.rs  token.rs
crates/parser/src/parser/: infra.rs  mod.rs  parser.rs  token_set.rs  tree_builder.rs
crates/parser/src/preparse/: conversion.rs  converter.rs  errors.rs  lexed_str.rs  mod.rs  tests.rs
crates/parser/src/preprocessor/: errors.rs  iter.rs  mod.rs  preprocessor.rs  store.rs
crates/parser/src/utils/: mod.rs  peek.rs  utils.rs
crates/span/: Cargo.toml
crates/span/src/: lib.rs
