[workspace]
members = ["crates/*"]
default-members = ["crates/neotex"]
resolver = "2"

[workspace.package]
rust-version = "1.71"
edition = "2021"
authors = ["Leon Fuss"]

[profile.release]
opt-level = 3
lto = true

[workspace.dependencies]
# local crates
parser = { path = "./crates/parser", version = "0.0.0" }
span = { path = "./crates/span", version = "0.0.0" }
collections = { path = "./crates/collections", version = "0.0.0" }

tracing = "0.1"
tracing-subscriber = "0.3"
