[package]
name = "neotex"
version = "0.0.0"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer.workspace = true
parser.workspace = true
tracing.workspace = true

tracing-subscriber = "0.3"

[features]
integration-tests = []
