[package]
name = "parser"
version = "0.0.0"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
collections.workspace = true
span.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

rustc-hash = "1.1.0"
itertools = "0.12.0"
thiserror = "1.0.56"
rowan = "0.15.15"
salsa = "0.17.0-pre.2"
unicode-ident = "1.0"

[features]
integration-tests = []
